src/objects/CventEvents__DataTransferMapping__c.object
<CustomObject>
    <description>Represents a field mapping within a data transfer configuration.</description>
    <fields>
        <fullName>CventEvents__AnswerTo__c</fullName>
        <description>Stores either question or question tag stub.</description>
        <externalId>true</externalId>
        <inlineHelpText>Stores either question or question tag stub.</inlineHelpText>
        <label>Answer To</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__AnswerType__c</fullName>
        <description>Indicates answer property used in mapping.</description>
        <inlineHelpText>Indicates answer property used in mapping.</inlineHelpText>
        <label>Answer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Answer</fullName>
                </value>
                <value>
                    <fullName>Choice Index</fullName>
                </value>
                <value>
                    <fullName>Report Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__CventField__c</fullName>
        <description>Stores source field API name.</description>
        <inlineHelpText>Stores source field API name.</inlineHelpText>
        <label>Cvent Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__CventObject__c</fullName>
        <description>Indicates source Cvent object used in mapping.</description>
        <inlineHelpText>Indicates source Cvent object used in mapping.</inlineHelpText>
        <label>Cvent Object</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cvent Contact</fullName>
                </value>
                <value>
                    <fullName>Survey Respondent</fullName>
                </value>
                <value>
                    <fullName>Survey Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__DataTransferConfiguration__c</fullName>
        <label>Data Transfer Configuration</label>
        <referenceTo>CventEvents__DataTransferConfiguration__c</referenceTo>
        <relationshipLabel>Data Transfer Mappings</relationshipLabel>
        <relationshipName>DataTransferMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CventEvents__DefaultValue__c</fullName>
        <description>Stores value which is filled in the target field in case the source field value is empty.</description>
        <inlineHelpText>Stores value which is filled in the target field in case the source field value is empty.</inlineHelpText>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__SalesforceField__c</fullName>
        <description>Stores target field API name.</description>
        <inlineHelpText>Stores target field API name.</inlineHelpText>
        <label>Salesforce Field</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Data Transfer Mapping</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__DataTransferConfiguration__c</columns>
        <columns>CventEvents__CventObject__c</columns>
        <columns>CventEvents__CventField__c</columns>
        <columns>CventEvents__AnswerTo__c</columns>
        <columns>CventEvents__AnswerType__c</columns>
        <columns>CventEvents__SalesforceField__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DTM-{00000000}</displayFormat>
        <label>Data Transfer Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Transfer Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>